--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -5,30 +5,6 @@
 // bower:scss
 // endbower
 
-@mixin switching-cards {
-  $animation-duration: 0.4s;
-
-  material-card {
-    &.ng-enter {
-      animation: $animation-duration bounce-left;
-      animation-timing-function: $swift-ease-out-timing-function;
-      animation-fill-mode: forwards;
-    }
-    &.ng-leave {
-      display: none;
-    }
-  }
-  achievement-card, user-card {
-    &.ng-enter {
-      animation: $animation-duration bounce-right;
-      animation-timing-function: $swift-ease-out-timing-function;
-      animation-fill-mode: forwards;
-    }
-    &.ng-leave {
-      display: none;
-    }
-  }
-}
 
 $font-family: Roboto, 'Helvetica Neue', sans-serif !default;
 $font-size: 10px !default;
@@ -43,13 +19,7 @@ $font-size: 10px !default;
 
 @keyframes bounce-right {
   0% {
-    transform: translateX(2000px);
-  }
-  70% {
-    transform: translateX(-30px);
-  }
-  90% {
-    transform: translateX(-10px);
+    transform: translateX(1000px);
   }
   100% {
     transform: translateX(0);
@@ -58,13 +28,7 @@ $font-size: 10px !default;
 
 @keyframes bounce-left {
   0% {
-    transform: translateX(-2000px);
-  }
-  70% {
-    transform: translateX(30px);
-  }
-  90% {
-    transform: translateX(10px);
+    transform: translateX(-1000px);
   }
   100% {
     transform: translateX(0);
@@ -130,6 +94,72 @@ $material-leave-timing-function: cubic-bezier(0.4, 0.0, 1, 1);
 $material-leave: all $material-leave-duration $material-leave-timing-function;
 
 $material-toolbar-height: 64px;
+
+@mixin switching-cards {
+  $animation-duration: 0.3s;
+
+  material-card {
+    &.ng-enter {
+      animation: $animation-duration bounce-left;
+      animation-timing-function: $swift-ease-out-timing-function;
+      animation-fill-mode: forwards;
+    }
+    &.ng-leave {
+      display: none;
+    }
+  }
+  achievement-card, user-card {
+    &.ng-enter {
+      animation: $animation-duration bounce-right;
+      animation-timing-function: $swift-ease-out-timing-function;
+      animation-fill-mode: forwards;
+    }
+    &.ng-leave {
+      display: none;
+    }
+  }
+}
+
+@mixin active-background($animation-duration) {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 299;
+  background: $color-grey-normal;
+  opacity: 0.1;
+
+  animation: #{$animation-duration} opacity;
+  animation-timing-function: $swift-ease-in-timing-function;
+  animation-fill-mode: forwards;
+
+  &.ng-hide-add {
+    animation: #{$animation-duration} opacity-reversed;
+    animation-timing-function: $swift-ease-in-timing-function;
+    animation-fill-mode: forwards;
+  }
+
+  @keyframes opacity {
+    from {
+      opacity: 0.1;
+    }
+    to {
+      opacity: 0.7;
+    }
+  }
+
+  @keyframes opacity-reversed {
+    from {
+      opacity: 0.7;
+    }
+    to {
+      opacity: 0;
+    }
+  }
+}
 
 @import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700,700italic,400italic);
 
