--- a/src/app/states/achievements/achievements.scss
+++ b/src/app/states/achievements/achievements.scss
@@ -1,77 +1,21 @@
-$card-active-animation-duration: 0.3s;
+$card-active-animation-duration: 0.25s;
 
 @keyframes material-card-to-top {
   from {
     width: 100%;
     margin: 0 auto;
-    position: fixed;
-    z-index: 300;
-    top: 35%;
-    right: 0;
-  }
-  65% {
-    width: 50%;
-    margin: 0 auto;
-    position: fixed;
-    z-index: 300;
-    top: 20%;
-    right: 25%;
   }
   to {
     width: 500px;
     margin: 0 auto;
-    position: fixed;
     z-index: 300;
-    top: 15%;
-    right: calc(50% - 250px);
+    transform: translateY(-20%);
   }
 }
 
 .achievements {
   &--no-scroll {
     overflow: hidden;
-  }
-  &-active-background {
-    width: 100%;
-    height: 100%;
-
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 299;
-
-    background: $color-grey-normal;
-    opacity: 0.1;
-
-    animation: $card-active-animation-duration opacity;
-    animation-timing-function: $swift-ease-in-timing-function;
-    animation-fill-mode: forwards;
-
-    &.ng-hide-add {
-      animation: $card-active-animation-duration opacity-reversed;
-      animation-timing-function: $swift-ease-in-timing-function;
-      animation-fill-mode: forwards;
-    }
-
-    @keyframes opacity {
-      from {
-        opacity: 0.1;
-      }
-      to {
-        opacity: 0.7;
-      }
-    }
-
-    @keyframes opacity-reversed {
-      from {
-        opacity: 0.7;
-      }
-      to {
-        opacity: 0;
-      }
-    }
   }
 
   &-new-card {
@@ -88,6 +32,8 @@ $card-active-animation-duration: 0.3s;
   }
 
   .achievements-cards {
+    position: relative;
+
     .achievements-card {
       material-card {
         &.active {
@@ -97,12 +43,12 @@ $card-active-animation-duration: 0.3s;
           border-radius: 0.125em;
           box-shadow: 0 25px 35px 0 rgba(0, 0, 0, 0.3);
           animation: $card-active-animation-duration material-card-to-top;
-          animation-timing-function: ease-in;
+          animation-timing-function: linear;
           animation-fill-mode: forwards;
 
           &.ng-leave {
             animation: $card-active-animation-duration material-card-to-top;
-            animation-timing-function: ease-in;
+            animation-timing-function: linear;
             animation-direction: reverse;
             animation-fill-mode: forwards;
           }
@@ -111,11 +57,24 @@ $card-active-animation-duration: 0.3s;
         &:not(.active) {
           &.ng-enter {
             animation: $card-active-animation-duration material-card-to-top;
-            animation-timing-function: ease-in;
+            animation-timing-function: linear;
             animation-direction: reverse;
           }
         }
       }
     }
+  }
+}
+
+material-content {
+  &.achievements, &.achievement, &.users, &.user {
+    padding: 50px 10%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
