Animation fixes, users screen logic.

--- a/src/app/components/directive/card/material-card.scss
+++ b/src/app/components/directive/card/material-card.scss
@@ -134,7 +134,7 @@ material-card {
         align-items: center;
         justify-content: center;
 
-        &:before {
+        span.alttext, &:before {
           font-style: italic;
           color: $color-grey-normal;
         }
