--- a/src/app/states/directive/achievementUserCard/userCard/userCard.template.html
+++ b/src/app/states/directive/achievementUserCard/userCard/userCard.template.html
@@ -42,5 +42,5 @@
     </material-button>
   </material-card-actions>
 </material-card>
-<div class="active-background"
+<div class="active-background ng-hide"
      ng-show="$ctrl.active"></div>
