--- a/src/app/components/directive/tabs/material-tabs.scss
+++ b/src/app/components/directive/tabs/material-tabs.scss
@@ -76,6 +76,10 @@ material-tabs {
       width: 100%;
       display: none;
       left: 0;
+
+      .empty-state {
+        @include empty-state(300px);
+      }
     }
   }
 }
