--- a/src/app/states/achievements/achievements.scss
+++ b/src/app/states/achievements/achievements.scss
@@ -64,6 +64,10 @@ $card-active-animation-duration: 0.25s;
         }
       }
     }
+
+    .empty-state {
+      @include empty-state(600px);
+    }
   }
 }
 
