--- a/src/app/states/main/main.html
+++ b/src/app/states/main/main.html
@@ -12,12 +12,16 @@
     <li>
       <a material-button
          ui-sref=".users"
-         ng-click="mainCtrl.isSidenavOpen = false">Пользователи</a>
+         ng-click="mainCtrl.isSidenavOpen = false">
+        <i class="material-icons">group</i><b>Пользователи</b>
+      </a>
     </li>
     <li>
       <a material-button
          ui-sref=".achievements"
-         ng-click="mainCtrl.isSidenavOpen = false">Достижения</a>
+         ng-click="mainCtrl.isSidenavOpen = false">
+        <i class="material-icons">assignment</i><b>Достижения</b>
+      </a>
     </li>
   </ul>
 </material-sidenav>
