--- a/src/app/states/achievements/achievements.html
+++ b/src/app/states/achievements/achievements.html
@@ -16,8 +16,21 @@
                       close-achievement="achievementsCtrl.closeAddingCard()"></achievement-card>
   </div>
   <div class="achievements-cards">
+    <div class="fliters">
+      <div class="filters-input"></div>
+      <div class="filters-checkboxes">
+        <div class="material-checkbox">
+          <input id="archived"
+                 type="checkbox"
+                 ng-model="achievementsCtrl.archived"
+                 ng-model-options="{ debounce: 1000 }"
+                 ng-change="achievementsCtrl.showArchived(achievementsCtrl.archived)">
+          <label for="archived">Архивные</label>
+        </div>
+      </div>
+    </div>
     <div class="achievements-card"
-         ng-repeat="achievement in achievementsCtrl.achievements.cards | orderBy:'obj.name' track by achievement.obj.id">
+         ng-repeat="achievement in achievementsCtrl.achievements.cards | archived:achievementsCtrl.archived | orderBy:'obj.name' track by achievement.obj.id">
       <achievement-card
         ng-if="achievement.$active"
         ng-class="{'active': achievement.$active}"
@@ -52,11 +65,19 @@
                            ng-click="achievementsCtrl.editAchievement(achievement)">
             <i class="material-icons">edit</i>
           </material-button>
-          <material-button class="material-icon-button material-button--red"
-                           title="Удалить достижение"
-                           ng-click="achievementsCtrl.deleteAchievement(achievement, $event)">
+          <span ng-switch="achievement.obj.archived">
+            <material-button ng-switch-when="true"
+                             class="material-icon-button material-button--green"
+                             title="Восстановить достижение"
+                             ng-click="achievementsCtrl.restoreAchievement(achievement, $event)">
+            <i class="material-icons">undo</i>
+            <material-button ng-switch-default
+                             class="material-icon-button material-button--red"
+                             title="Удалить достижение"
+                             ng-click="achievementsCtrl.deleteAchievement(achievement, $event)">
             <i class="material-icons">delete</i>
           </material-button>
+          </span>
         </material-card-actions>
       </material-card>
     </div>
